tests/nightly_ui/missing_type.stderr
error[E0277]: the trait bound `TyEnd: Contains<u32>` is not satisfied
 --> $DIR/missing_type.rs:9:19
  |
3 | fn missing_value<Opts: Contains<u32>>(opts: &Opts) {
  |                        ------------- required by this bound in `missing_value`
...
9 |     missing_value(&map);
  |                   ^^^^ the trait `Contains<u32>` is not implemented for `TyEnd`
  |
  = note: required because of the requirements on the impl of `Contains<u32>` for `Ty<&str, TyEnd>`
